[package]
name = "ed25519"
version = "0.1.0"
authors = ["Matthew Collier <mcollier@digitalbazaar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519 = "1.0.3"
ed25519-dalek = "1"
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

# [profile.release]
# lto = true
# opt-level = 'z'

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = ['-O4']
